--- a/exercises/part-1/todo-app/manifests/deployment.yaml
+++ b/exercises/part-1/todo-app/manifests/deployment.yaml
@@ -15,3 +15,6 @@ spec:
       containers:
         - name: todo-app
           image: yonggron/todo-app
+          env:
+            - name: PORT
+              value: "3000"
