--- a/exercises/part-1/log-output/manifests/deployment.yaml
+++ b/exercises/part-1/log-output/manifests/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: log-output
+  name: log-output-dep
 spec:
   replicas: 1
   selector:
@@ -14,4 +14,7 @@ spec:
     spec:
       containers:
         - name: log-output
-          image: yonggron/log-output
+          image: yonggron/log-output:latest
+          env:
+          - name: PORT
+            value: "3001"
