--- a/exercises/part-1/ping-pong/manifests/service.yaml
+++ b/exercises/part-1/ping-pong/manifests/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: log-output-svc
+  name: ping-pong-svc
 spec:
   type: ClusterIP
   selector:
-    app: log-output
+    app: ping-pong
   ports:
     - port: 2346
       protocol: TCP
-      targetPort: 3001
+      targetPort: 3002
